# eink-dashboard

./: .gitignore  README.md  cowsay.py  cowsay_dev.py  deploy.sh  mappyboi.py  mappyboi_dev.py  picam.py  pyproject.toml  requirements.txt  settings.py.sample
.github/workflows/: codeql.yml
quotes-display/: README.md
quotes-display/scraper/: scraper.py
src/: cowsay.py  dashboard.py  mappyboi.py
src/tools/: apis.py  graphing.py  images.py  tiles.py  utils.py
tools/: apis.py  fonts.py  graphing.py  images.py  tiles.py  utils.py
v2/: .gitignore  Cargo.toml  README.md  api.py  camera.py  datatypes.py  deploy.sh  display.py  fonts.py  graphics.py  main.py  settings.example.json  storage.py  test.py  utils.py
v2/src/: main.rs
waveshare_epd/: epd7in5b_V3.py
