[tool.poetry]
name = "eink-dashboard"
version = "0.1.0"
description = "Yay display"
authors = ["James Jarvis <git@jamesjarvis.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "7.2.0"
pytz = "2020.1"
matplotlib = "3.2.2"
requests = "2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
