[package]
name = "eink-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["James Jarvis <git@jamesjarvis.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
image = "0.24.3"
num-complex = "0.4.2"
reqwest = "0.11.11"
tokio = { version = "1.21.0", features = ["full"] }
